# ansi-escape-sequences-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  demo.sh
.github/workflows/: rust.yml
res/zsh-completion/: _ansi  install.sh
src/: cli.rs  input.rs  main.rs
