[package]
name = "ansi-escape-sequences-cli"
description = """
A CLI utility installed as "ansi" to quickly get ANSI escape sequences. Supports the most basic ones,
like colors and styles as bold or italic.
"""
version = "0.1.2"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2018"
keywords = ["ansi", "vt100", "escape-sequences", "terminal"]
categories = [ "command-line-utilities" ]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/ansi-escape-sequences-cli"
repository = "https://github.com/phip1611/ansi-escape-sequences-cli"
documentation = "https://docs.rs/ansi-escape-sequences-cli"
include = [
    "src/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICSNESE",
    "res"
]

[[bin]]
name = "ansi"
path = "src/main.rs"

[dependencies]
# library for the sequence codes
ansi_term = "0.12.1"
