[package]
name = "ansi-escape-sequences-cli"
description = """
CLI tool for generating and applying ANSI escape sequences to colorize and style
terminal output — ideal for scripts, prompts, and debugging.
"""
version = "0.2.2"
authors = ["Philipp Schuster <phip1611@gmail.com>"]
edition = "2024"
rust-version = "1.85.1"
keywords = ["ansi", "vt100", "escape-sequences", "terminal"]
categories = [ "command-line-utilities" ]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/ansi-escape-sequences-cli"
repository = "https://github.com/phip1611/ansi-escape-sequences-cli"
documentation = "https://docs.rs/ansi-escape-sequences-cli"
include = [
"src/**/*",
"Cargo.toml",
"Cargo.lock",
"README.md",
"LICSNESE",
"res"
]

[[bin]]
name = "ansi"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "s"
strip = true

[dependencies]

[dependencies.clap]
version = "4.5.38"
default-features = false
features = [
  "cargo",
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage",
  "wrap_help",
]
